# ExePatch

./: .eslintignore  README.md  package-lock.json  package.json  svelte.config.js
src/: app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  music.rs  types.rs
src/components/: Button.svelte  Music.svelte
src/routes/: +layout.svelte  +page.svelte
