[package]
name = "exepatch"
version = "1.0.0-beta.1"
description = "A tool used for patching different properties inside of Kula executable files."
authors = ["SaturnKai"]
license = "MIT"
repository = "https://github.com/kulaworkshop/exepatch/"
default-run = "exepatch"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["dialog-open"] }
byteorder = "1"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
